{
    "name": "UserInterface",
    "maps": [
        {
            "name": "UI",
            "id": "49c80726-b667-4b7c-845a-c63ce5a32dfb",
            "actions": [
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "4298b2d0-c26b-402b-abcc-1ccee24fcff3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DebugInfo",
                    "type": "Button",
                    "id": "f8c2e455-0c4a-4a92-a5cc-0df4229c48af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GamepadArrows",
                    "type": "Value",
                    "id": "17355214-37bc-4184-801f-b6a4435b7d7a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f8d42e72-14b6-46b4-b89e-0ecd011d7b39",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb095197-28b8-4061-b456-d7efc0e938ad",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e359dc94-3e9a-4779-9bfc-2f8db57675c7",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "badab155-3d35-4b46-8cef-229d6fcd89ea",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "2dc64127-e7c5-4d13-b23f-6348a9ea59cc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadArrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f83a1308-785e-4d98-88fb-c5b0a6b84231",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8d809171-f25e-4a01-b4ea-e5c3b0971ba5",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e34a658b-60b9-4778-9389-69bc766dc8f2",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9f7fc9b5-01df-445a-bc80-6c508ad003cb",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadArrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "UserInterface",
            "bindingGroup": "UserInterface",
            "devices": []
        }
    ]
}